Update 'whgk5eq73-nodejs' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-fed0aaf12e.0vs1.p3.openshiftapps.com/rhtap/rhtap-qe:e98be17dfc827003c0d9eb6e4ca0c4c69bd4eb4a@sha256:ae9d3aae58c556e16797eeca305fb250c3af1073910230f47680d6e824feeb91

--- a/components/whgk5eq73-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/whgk5eq73-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: whgk5eq73-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-fed0aaf12e.0vs1.p3.openshiftapps.com/rhtap/rhtap-qe:e98be17dfc827003c0d9eb6e4ca0c4c69bd4eb4a@sha256:ae9d3aae58c556e16797eeca305fb250c3af1073910230f47680d6e824feeb91
+          name: container-image
